Changed email address to current address

--- a/juniper.tex
+++ b/juniper.tex
@@ -65,7 +65,7 @@
 
 \authorinfo{Caleb Helbling}
            {Tufts University}
-           {caleb.helbling@gmail.com}
+           {caleb.helbling@yahoo.com}
 \authorinfo{Samuel Z Guyer}
            {Tufts University}
            {sguyer@cs.tufts.edu}
