--- a/juniper.tex
+++ b/juniper.tex
@@ -44,8 +44,8 @@
 
 \conferenceinfo{FARM '16}{September 24, 2016, Nara, Japan} 
 \copyrightyear{2016} 
-\copyrightdata{978-1-nnnn-nnnn-n/yy/mm} 
-\doi{nnnnnnn.nnnnnnn}
+\copyrightdata{978-1-4503-4432-6/16/09} 
+\doi{2975980.2975982}
 
 % Uncomment one of the following two, if you are not going for the 
 % traditional copyright transfer agreement.
